# kotiki_home_bot

./: .gitignore  Dockerfile  alembic.ini  cron.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_29_1555-62204037fe4f_notifications_table.py  2024_04_29_1742-35654106913f_suspend_watcher.py
kotiki/api/: bot_api.py
kotiki/commands/: bot_commands.py
kotiki/core/: api_client.py  bot.py  db.py  interfaces.py  log.py  utils.py
kotiki/core/managers/: notifications_manager.py  site_watcher_manager.py
kotiki/core/models/: config.py  db.py  retort.py  site_watcher.py
kotiki/cron/: notification_executor.py  site_watcher.py
kotiki/entrypoints/: bot.py  cron.py
